@@ -1,5 +1,7 @@
 2021-03-20  Ulrich Müller  <ulm@gentoo.org>
 
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.
+
 	* ebuild-mode.el (ebuild-mode-delete-cvs-line): Change default
 	to nil.
 
